--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,12 @@
-# Python
-.venv/
-__pycache__/
-*.pyc
-
-# macOS
-.DS_Store
-
-# Node (future UI)
-node_modules/
-
-# Environment files
+.next
+node_modules
+.env.local
 .env
-*.env
-.env.*
-
-# Local data and private assets
-/private/
-/data/
+.DS_Store
+*.log
+.cache
+coverage
+.vercel
+.vscode
 *.sqlite
-*.db
-
-# Credentials / tokens (safety)
-service_account.json
-*.json
-!data/*.json
-
-# VSCode/Cursor
-.vscode/
-.idea/
+*.tsbuildinfo
