--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ito-collection",
   "private": true,
-  "version": "0.3.0",
+  "version": "0.3.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -21,9 +21,10 @@
     "dotenv": "^17.2.1",
     "jose": "^5.10.0",
     "nanoid": "^5.0.7",
-    "next": "14.2.31",
+    "next": "^14.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "sharp": "^0.33.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
