--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@supabase/supabase-js": "^2.45.4",
     "dotenv": "^17.2.1",
     "jose": "^5.10.0",
+    "file-type": "^19.6.0",
+    "heic-convert": "^1.2.4",
     "nanoid": "^5.0.7",
     "next": "^14.2.0",
     "react": "18.3.1",
