UI: nav dropdown stability + organization; Media index shows media numbers only; Members list polish + tea school support; Edit page fix; Prices masked with reveal; Scripts: update prices + sync accounts schema; DB: tea_schools table + FK; Various admin improvements

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ci": "npm run lint && npm run typecheck && npm run test && npm run build:prod && vercel build --yes",
     "seed": "ts-node scripts/seed-object.ts",
     "ingest:notion": "ts-node scripts/ingest-notion.ts",
-    "seed:licenses": "ts-node scripts/seed-licenses.ts"
+    "seed:licenses": "ts-node scripts/seed-licenses.ts",
+    "sync:accounts-schema": "ts-node scripts/sync-accounts-schema.ts"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
