--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:prod": "NODE_ENV=production next build",
     "test": "vitest run",
     "ci": "npm run lint && npm run typecheck && npm run test && npm run build:prod && vercel build --yes",
+    "prepare": "husky",
     "seed": "ts-node scripts/seed-object.ts",
     "ingest:notion": "ts-node scripts/ingest-notion.ts",
     "seed:licenses": "ts-node scripts/seed-licenses.ts",
@@ -20,9 +21,9 @@
     "@notionhq/client": "^2.2.15",
     "@supabase/supabase-js": "^2.45.4",
     "dotenv": "^17.2.1",
-    "jose": "^5.10.0",
     "file-type": "^19.6.0",
     "heic-convert": "^1.2.4",
+    "jose": "^5.10.0",
     "nanoid": "^5.0.7",
     "next": "^14.2.0",
     "react": "18.3.1",
@@ -36,6 +37,7 @@
     "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
+    "husky": "^9.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "vitest": "^2.1.9"
