--- a/.github/workflows/vercel-preview.yml
+++ b/.github/workflows/vercel-preview.yml
@@ -16,7 +16,8 @@ jobs:
       VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
       VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
       VERCEL_CLI_TELEMETRY_DISABLED: 1
-      NODE_ENV: production
+      # Disable Husky hook installation in CI, while still allowing dev deps install
+      HUSKY: 0
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,8 +28,8 @@ jobs:
           node-version: 20
           cache: npm
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies (include dev)
+        run: npm ci --include=dev
 
       - name: Verify Vercel token and scope
         run: npx vercel whoami --token "$VERCEL_TOKEN" --scope "$VERCEL_ORG_ID"
