--- a/.github/workflows/vercel-preview.yml
+++ b/.github/workflows/vercel-preview.yml
@@ -31,14 +31,21 @@ jobs:
       - name: Install dependencies (include dev)
         run: npm ci --include=dev
 
+      - name: Write .vercel/project.json from secrets (explicit)
+        run: |
+          mkdir -p .vercel
+          cat > .vercel/project.json <<JSON
+          {"projectId":"${VERCEL_PROJECT_ID}","orgId":"${VERCEL_ORG_ID}"}
+          JSON
+
       - name: Verify Vercel token and scope
-        run: npx vercel whoami --token "$VERCEL_TOKEN" --scope "$VERCEL_ORG_ID"
+        run: npx vercel whoami --token "$VERCEL_TOKEN"
 
       - name: Pull Vercel env (preview)
-        run: npx vercel pull --yes --environment=preview --token "$VERCEL_TOKEN" --scope "$VERCEL_ORG_ID"
+        run: npx vercel pull --yes --environment=preview --token "$VERCEL_TOKEN"
 
       - name: Build locally with Vercel
-        run: npx vercel build --yes
+        run: npx vercel build --yes --token "$VERCEL_TOKEN"
 
       # Optional: Deploy the prebuilt output as a preview deployment via CLI
       # If you already use Vercel Git integration to auto-deploy, you can remove this step.
