--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "build:prod": "NODE_ENV=production next build",
-    "test": "vitest run",
+    "test": "vitest run --environment=jsdom",
     "ci": "npm run lint && npm run typecheck && npm run test && npm run build:prod && vercel build --yes",
     "prepare": "husky",
     "seed": "ts-node scripts/seed-object.ts",
@@ -33,6 +33,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.12",
+    "@testing-library/dom": "^10.0.0",
+    "@testing-library/react": "^16.0.0",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -40,6 +42,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "husky": "^9.1.7",
+    "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
     "ts-node": "^10.9.2",
