--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ito-collection",
   "private": true,
-  "version": "0.6.0",
+  "version": "0.7.0",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
@@ -13,7 +13,7 @@
     "ci": "npm run lint && npm run typecheck && npm run test && npm run build:prod && vercel build --yes",
     "prepare": "husky",
     "seed": "ts-node scripts/seed-object.ts",
-    "ingest:notion": "ts-node scripts/ingest-notion.ts",
+    "ingest:notion": "ts-node --files --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"node\"}' scripts/ingest-notion.ts",
     "seed:licenses": "ts-node scripts/seed-licenses.ts",
     "sync:accounts-schema": "ts-node scripts/sync-accounts-schema.ts"
   },
