--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
+    "supabase": "^2.34.3",
     "tailwindcss": "^4.1.12",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
