--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tailwindcss/postcss": "^4.1.12",
     "@testing-library/dom": "^10.0.0",
     "@testing-library/react": "^16.0.0",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
