--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ito-collection",
   "private": true,
-  "version": "1.1.0",
+  "version": "1.2.0",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
@@ -15,7 +15,8 @@
     "seed": "ts-node scripts/seed-object.ts",
     "ingest:notion": "ts-node --files --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"node\"}' scripts/ingest-notion.ts",
     "seed:licenses": "ts-node scripts/seed-licenses.ts",
-    "sync:accounts-schema": "ts-node scripts/sync-accounts-schema.ts"
+    "sync:accounts-schema": "ts-node scripts/sync-accounts-schema.ts",
+    "backfill:tokens": "ts-node --files --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"node\"}' scripts/backfill-tokens.ts"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
