--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ito-collection",
   "private": true,
-  "version": "1.2.0",
+  "version": "1.2.1",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
@@ -26,7 +26,7 @@
     "heic-convert": "^1.2.4",
     "jose": "^5.10.0",
     "nanoid": "^5.0.7",
-    "next": "^14.2.0",
+    "next": "^14.2.32",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sharp": "^0.33.5",
@@ -42,7 +42,7 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^14.2.32",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
