--- a/.github/workflows/vercel-preview.yml
+++ b/.github/workflows/vercel-preview.yml
@@ -29,7 +29,7 @@ jobs:
           cache: npm
 
       - name: Install dependencies (include dev)
-        run: npm ci --include=dev
+        run: npm install --no-audit --no-fund
 
       - name: Write .vercel/project.json from secrets (explicit)
         run: |
