--- a/package.json
+++ b/package.json
@@ -51,5 +51,10 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "vitest": "^3.2.4"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.21.0",
+    "lightningcss": "^1.25.1",
+    "lightningcss-linux-x64-gnu": "^1.25.1"
   }
 }
