--- a/.github/workflows/vercel-preview.yml
+++ b/.github/workflows/vercel-preview.yml
@@ -45,7 +45,7 @@ jobs:
         run: npx vercel pull --yes --environment=preview --token "$VERCEL_TOKEN"
 
       - name: Build locally with Vercel
-        run: npx vercel build --yes --token "$VERCEL_TOKEN"
+        run: NEXT_DISABLE_LIGHTNINGCSS=1 npx vercel build --yes --token "$VERCEL_TOKEN"
 
       # Optional: Deploy the prebuilt output as a preview deployment via CLI
       # If you already use Vercel Git integration to auto-deploy, you can remove this step.
