--- a/package.json
+++ b/package.json
@@ -50,11 +50,9 @@
     "tailwindcss": "^4.1.12",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
-    "vitest": "^3.2.4"
-  },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.21.0",
+    "vitest": "^3.2.4",
     "lightningcss": "^1.25.1",
-    "lightningcss-linux-x64-gnu": "^1.25.1"
+    "lightningcss-linux-x64-gnu": "^1.25.1",
+    "@rollup/rollup-linux-x64-gnu": "^4.21.0"
   }
 }
