--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
   "version": 2,
   "framework": "nextjs",
+  "installCommand": "npm install --no-audit --no-fund",
+  "buildCommand": "NEXT_DISABLE_LIGHTNINGCSS=1 next build",
   "redirects": [
     {
       "source": "/:path*",
