--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ito-collection",
   "private": true,
   "version": "1.2.1",
+  "packageManager": "pnpm@9.7.0",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "NEXT_DISABLE_LIGHTNINGCSS=1 next build",
@@ -10,8 +11,8 @@
     "typecheck": "tsc --noEmit",
     "build:prod": "NODE_ENV=production NEXT_DISABLE_LIGHTNINGCSS=1 next build",
     "test": "vitest run --environment=jsdom",
-    "ci": "npm run lint && npm run typecheck && npm run test && npm run build:prod && vercel build --yes",
-    "ci:local": "npm run lint && npm run typecheck && npm run test && NEXT_DISABLE_LIGHTNINGCSS=1 npm run build:prod",
+    "ci": "pnpm lint && pnpm typecheck && pnpm test && pnpm build:prod && vercel build --yes",
+    "ci:local": "pnpm lint && pnpm typecheck && pnpm test && NEXT_DISABLE_LIGHTNINGCSS=1 pnpm build:prod",
     "prepare": "husky",
     "seed": "ts-node scripts/seed-object.ts",
     "ingest:notion": "ts-node --files --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"node\"}' scripts/ingest-notion.ts",
