--- a/.github/workflows/vercel-preview.yml
+++ b/.github/workflows/vercel-preview.yml
@@ -44,17 +44,17 @@ jobs:
           JSON
 
       - name: Verify Vercel token and scope
-        run: npx vercel whoami --token "$VERCEL_TOKEN"
+        run: pnpm exec vercel whoami --token "$VERCEL_TOKEN"
 
       - name: Pull Vercel env (preview)
-        run: npx vercel pull --yes --environment=preview --token "$VERCEL_TOKEN"
+        run: pnpm exec vercel pull --yes --environment=preview --token "$VERCEL_TOKEN"
 
       - name: Build locally with Vercel
-        run: TAILWIND_DISABLE_OXIDE=1 NEXT_DISABLE_LIGHTNINGCSS=1 npx vercel build --yes --token "$VERCEL_TOKEN"
+        run: TAILWIND_DISABLE_OXIDE=1 NEXT_DISABLE_LIGHTNINGCSS=1 pnpm exec vercel build --yes --token "$VERCEL_TOKEN"
 
       # Optional: Deploy the prebuilt output as a preview deployment via CLI
       # If you already use Vercel Git integration to auto-deploy, you can remove this step.
       # - name: Deploy prebuilt output (preview)
-      #   run: npx vercel deploy --prebuilt --yes --token "$VERCEL_TOKEN" --scope "$VERCEL_ORG_ID"
+      #   run: pnpm exec vercel deploy --prebuilt --yes --token "$VERCEL_TOKEN" --scope "$VERCEL_ORG_ID"
 
 
