--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
+    "vercel": "^39.4.2",
     "vitest": "^3.2.4"
   },
   "optionalDependencies": {
