fix: update vercel.json to use pnpm for install command
- Change installCommand from npm to pnpm in vercel.json
- This fixes the Vercel CLI preview build failure
- Vercel was trying to use npm despite pnpm lockfile

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "installCommand": "npm install --no-audit --no-fund",
+  "installCommand": "pnpm install --frozen-lockfile",
   "buildCommand": "NEXT_DISABLE_LIGHTNINGCSS=1 next build",
   "redirects": [
     {
