chore(data): add clone-supabase-data script and npm script to copy data from main project into branch

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "sync:accounts-schema": "ts-node scripts/sync-accounts-schema.ts",
     "backfill:tokens": "ts-node --files --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"node\"}' scripts/backfill-tokens.ts",
     "migrate:location-media": "ts-node --files --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"node\"}' scripts/migrate-location-media.ts",
-    "cleanup:location-folder": "ts-node --files --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"node\"}' scripts/cleanup-location-folder.ts"
+    "cleanup:location-folder": "ts-node --files --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"node\"}' scripts/cleanup-location-folder.ts",
+    "clone:data": "ts-node --files --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"node\"}' scripts/clone-supabase-data.ts"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
