--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "jsdom": "^26.1.0",
     "lightningcss": "^1.25.1",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "supabase": "^2.34.3",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
