chore(ci,docs): monorepo boundaries + path-filtered CI; add ingestion README; update CONTRIBUTING/WORKFLOW/README

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,34 +1,90 @@
 name: CI
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches: [dev, main]
+  push:
+    branches: [dev]
 
 jobs:
-  build-and-test:
+  changes:
+    name: Detect changes
     runs-on: ubuntu-latest
+    outputs:
+      files: ${{ steps.diff.outputs.files }}
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v3
         with:
-          version: 9
+          fetch-depth: 2
+      - id: diff
+        shell: bash
+        run: |
+          BASE_REF="${{ github.base_ref }}"
+          if [ -z "$BASE_REF" ]; then BASE_REF=dev; fi
+          git fetch origin "$BASE_REF" --depth=1
+          git diff --name-only origin/$BASE_REF...HEAD | jq -Rsc 'split("\n")' > files.json
+          echo "files=$(cat files.json)" >> $GITHUB_OUTPUT
+
+  node:
+    name: Node (Next.js)
+    needs: changes
+    runs-on: ubuntu-latest
+    env:
+      FILES_CHANGED: ${{ needs.changes.outputs.files }}
+    if: >-
+      contains(join(fromJson(env.FILES_CHANGED), '\n'), 'app/') ||
+      contains(join(fromJson(env.FILES_CHANGED), '\n'), 'lib/') ||
+      contains(join(fromJson(env.FILES_CHANGED), '\n'), 'components/') ||
+      contains(join(fromJson(env.FILES_CHANGED), '\n'), 'package.json') ||
+      contains(join(fromJson(env.FILES_CHANGED), '\n'), 'pnpm-lock.yaml') ||
+      contains(join(fromJson(env.FILES_CHANGED), '\n'), 'tsconfig.json')
+    steps:
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'pnpm'
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm lint
-      - run: pnpm typecheck
-      - run: pnpm test
-      - run: TAILWIND_DISABLE_OXIDE=1 NEXT_DISABLE_LIGHTNINGCSS=1 pnpm build:prod
-        env:
-          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
-          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
-          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-          AAT_RECONCILE_URL: ${{ secrets.AAT_RECONCILE_URL }}
-          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
+          node-version: "20"
+          cache: "pnpm"
+      - name: Install
+        run: corepack enable && pnpm i --frozen-lockfile
+      - name: Lint & Typecheck
+        run: pnpm lint && pnpm typecheck
+      - name: Test
+        run: pnpm test --if-present
 
-  # Intentionally no deploy job: Vercel Git integration will auto-deploy `main`.
+  python:
+    name: Python (Ingestion)
+    needs: changes
+    runs-on: ubuntu-latest
+    env:
+      FILES_CHANGED: ${{ needs.changes.outputs.files }}
+    if: >-
+      contains(join(fromJson(env.FILES_CHANGED), '\n'), 'ingestion/') ||
+      contains(join(fromJson(env.FILES_CHANGED), '\n'), 'requirements.txt') ||
+      contains(join(fromJson(env.FILES_CHANGED), '\n'), 'requirements-dev.txt') ||
+      contains(join(fromJson(env.FILES_CHANGED), '\n'), 'src/') ||
+      contains(join(fromJson(env.FILES_CHANGED), '\n'), 'tests/')
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: "pip"
+      - name: Install
+        run: pip install -r requirements.txt -r requirements-dev.txt
+      - name: Test
+        run: pytest -q
 
+  sql:
+    name: SQL (Supabase)
+    needs: changes
+    runs-on: ubuntu-latest
+    env:
+      FILES_CHANGED: ${{ needs.changes.outputs.files }}
+    if: contains(join(fromJson(env.FILES_CHANGED), '\n'), 'supabase/')
+    steps:
+      - uses: actions/checkout@v4
+      - name: Lint SQL (listing placeholder)
+        run: |
+          echo "SQL files changed:" 
+          git ls-files supabase/**/*.sql | cat
+          # TODO: integrate sqlfluff or pgformatter for real linting
