--- a/.github/workflows/pr-ac-guard.yml
+++ b/.github/workflows/pr-ac-guard.yml
@@ -35,12 +35,12 @@ jobs:
             const { data } = await github.rest.issues.get({
               ...context.repo, issue_number: Number(issue_number)
             });
-            return { body: data.body || "" };
+            return data.body || "";
           result-encoding: string
       - name: Parse AC
         id: parse
         run: |
-          echo '${{ steps.issue.outputs.result }}' | jq -r '.body' > issue_body.txt
+          echo '${{ steps.issue.outputs.result }}' > issue_body.txt
           node -v
           mkdir -p scripts/ac
           cat > scripts/ac/extract-ac.ts <<'TS'
