--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,12 @@ jobs:
       contains(join(fromJson(needs.changes.outputs.files), '\n'), 'tsconfig.json')
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v4
         with:
-          node-version: "20"
+          run_install: false
+      - uses: actions/setup-node@v6
+        with:
+          node-version: "24"
           cache: "pnpm"
       - name: Install
         run: corepack enable && pnpm i --frozen-lockfile
